--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 /* src/index.css */
 body {
-  background-color: #f0f0f0;
+  background-color: #ebc0ac;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
